    - PlotPreClaimEvent 
    - PlotClaimEvent
    - PlotPreUnclaimEvent
    - PlotUnclaimEvent
  - Bump language file to 0.134. 
  - Fix exception when running /plot claim, courtesy of Warriorrrr with PR #5448.
0.97.2.19:
  - Fix Entity Listener paying attention to cancelled events, closes #5449.
  - Fix /n tabcompleter missing "invite".
  - Make /towny top balance run things async, which should make it easier on servers when there's no cached bank balances to work off of.
  - Fix nation spawns not being cleared when a capital changes, courtesy of Warriorrrr with PR #5456.
  - Make the outsiders prevent pvp toggle apply to plots, courtesy of Warriorrrr with PR #5455.
  - Show online status for console when running /res, courtesy of Warriorrrr with PR #5457.
  - Set the nation spawn to the town's spawn on creation, courtesy of Warriorrrr with PR #5458.
0.97.3.0
  - Bump version number for release.
0.97.3.1:
  - Fix outlaws teleporting into towns they're outlawed in using /n spawn, courtesy of Warriorrrr with PR #5461. 
  - Populate bukkit's /help towny page.
  - Add actionbar and bossbar messaging to TownyMessaging.
  - Re-jigger the ChunkNotifications showing code.
  - Fix surname formatting, courtesy of Warriorrrr with PR #5466.
  - Make the outsiders prevent pvp option apply to arenas aswell, courtesy of Warriorrrr with PR #5465.
  - Fix /nation set oobe, courtesy of Warriorrrr with PR #5464.
  - NewDay timer overhaul.
    - NewDays are re-scheduled over the course of time between new days, in order to maintain accuracy on low TPS servers.
    - day_intervals longer than 24 hours are no longer supported, but they didn't work well unless servers were run without shutting down. 
0.97.3.2:
  - Automatic Townyperms.yml update:
    - nomad group will have towny.command.town.ranklist and towny.command.nation.ranklist added to it.
  - Refactor a bunch of NationCommand code.
  - Fix how StatusScreens handle Components with children.