@@ -6996,3 +6996,5 @@ v0.92.0.11:
     - nomad group will have towny.command.town.ranklist and towny.command.nation.ranklist added to it.
   - Refactor a bunch of NationCommand code.
   - Fix how StatusScreens handle Components with children.
+  - Fix NationCommand permission node test.
+  - Deprecate the NationToggleUnknownEvent.
